@@ -2,10 +2,10 @@
 
 NULL =
 
-export CPPFLAGS:=$(shell dpkg-buildflags --get CPPFLAGS)
-export CFLAGS:=$(shell dpkg-buildflags --get CFLAGS)
-export CXXFLAGS:=$(shell dpkg-buildflags --get CXXFLAGS)
-export LDFLAGS:=$(shell dpkg-buildflags --get LDFLAGS)
+export CPPFLAGS:=$(shell dpkg-buildflags --get CPPFLAGS --export=cmdline)
+export CFLAGS:=$(shell dpkg-buildflags --get CFLAGS --export=cmdline)
+export CXXFLAGS:=$(shell dpkg-buildflags --get CXXFLAGS --export=cmdline)
+export LDFLAGS:=$(shell dpkg-buildflags --get LDFLAGS --export=cmdline)
 
 export LIBDIR = "/usr/lib/$(shell dpkg-architecture -qDEB_BUILD_MULTIARCH)"
 export INCLUDEDIR = "/usr/include/$(shell dpkg-architecture -qDEB_BUILD_MULTIARCH)"
